# ml-unsupervised

./: Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
notebooks/: 01_clustering_basics.ipynb  02_dimensionality_reduction.ipynb  03_clustering_with_dim_reduction.ipynb  04_pipeline_and_inference.ipynb  05_realworld_customer_clustering.ipynb  06_config_demo.ipynb  06_using_config.ipynb  07_llm_feedback_clustering.ipynb  08_anomaly_detection.ipynb  09_additional_methods.ipynb
src/: __init__.py  anomaly_detection.py  clustering.py  config.py  dimensionality_reduction.py  evaluation.py  pipelines.py  preprocessing.py  visualization.py
streamlit_app/: app.py
tests/: test_clustering.py  test_config.py  test_dimensionality.py  test_evaluation.py  test_pipelines.py
